rust/include/llm_runner.h

/* Generated by cbindgen */

#ifndef LLM_RUNNER_H
#define LLM_RUNNER_H

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

char *load_model_ffi(const char *model_name);

char *run_inference_c(const char *input);

char *download_model_ffi(const char *model_name);

void free_string(char *ptr);

uint32_t *tokenize_text_c(const char *text, uintptr_t *length);

void free_array(uint32_t *ptr, uintptr_t length);

void *tokenize_text(const char *_text);

char *detokenize_ids(const uint32_t *_tokens, uintptr_t _length);

#endif /* LLM_RUNNER_H */